--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -17,7 +17,7 @@
         <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
             <li class="uk-nav-header">#{otrosetiqueta['menu']}</li>
             <li class="uk-parent uk-open">
-                <a><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
+                <a><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/escuela.svg"  styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
                 <ul class="uk-nav-sub">
                     <li class="uk-active"><h:link outcome="dashboard"><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.dashboard']}</span></h:link></li>
                 </ul>
@@ -41,11 +41,18 @@
         </ul>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="tablas.css"/>
-        <h:outputStylesheet library="css" name="administracion/scroll-esquadron.css"/>
-        <h:outputStylesheet library="css" name="administracion/dashboard.css"/>
-        <h:outputStylesheet library="css" name="administracion/coordinador.css"/>
-        <h:outputStylesheet library="css" name="/administracion/estilo-tarjeton-licencia.css"/>
+        <ui:remove>
+            <h:outputStylesheet library="css" name="tablas.css"/>
+            <h:outputStylesheet library="css" name="administracion/scroll-esquadron.css"/>
+            <h:outputStylesheet library="css" name="administracion/dashboard.css"/>
+            <h:outputStylesheet library="css" name="administracion/coordinador.css"/>
+            <h:outputStylesheet library="css" name="/administracion/estilo-tarjeton-licencia.css"/>
+        </ui:remove>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/tablas.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/scroll-esquadron.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/dashboard.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/coordinador.css"/>
+        <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/administracion/estilo-tarjeton-licencia.css"/>
         <div uk-grid="">
 <!--        TODO estilios para la escuela actual    -->
             <div class="uk-width-1-1@s ">
@@ -339,7 +346,7 @@
                 <ui:repeat value="#{coordinadorControlador.coordinadorModeloLista}" var="coordinadorModelo">
                     <div class="tablero-licencia">
                         <div class="imagen">
-                            <h:graphicImage styleClass="uk-display-inline-block " library="img" name="/avatar/maestro.svg" width="60"/>
+                            <h:graphicImage styleClass="uk-display-inline-block " url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/maestro.svg"  width="60"/>
                         </div>
                         <div class="informacion">
                             <h6>Coordinator</h6>
@@ -363,8 +370,12 @@
                 <button class="uk-button uk-button-primary" onclick="generatePdf()" type="button">#{otrosboton['download.PDF']}</button>
             </div>
         </h:panelGroup>
+        <ui:remove>
         <h:outputScript library="js" name="html2pdf.bundle.min.js"/>
         <h:outputScript library="js" name="/administracion/coordinador.js"/>
+        </ui:remove>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/coordinador.js"></script>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/html2pdf.bundle.min.js"></script>
         <script type="text/javascript">
             var contrassenia;
             var contrasseniaeditar;
