--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -105,11 +105,11 @@
                                         <h:panelGroup layout="block" styleClass="uk-dropdown" pt:uk-dropdown="mode: click; boundary: .tabla-profesor">
                                             <ul class="uk-nav uk-dropdown-nav">
                                                 <li>
-                                                    <h:commandLink pt:uk-toggle="target: #modal-profesor-actualizar" styleClass="uk-text-left uk-text-primary" >
+                                                    <h:commandLink pt:uk-toggle="target: #modal-profesor" styleClass="uk-text-left uk-text-primary" >
                                                         <h:outputText pt:uk-icon="icon: file-edit" styleClass="uk-margin-small-right uk-icon" />
                                                         <span class="uk-text-middle"><h:outputText value="#{otrosboton['update']}" styleClass="primera-mayuscula uk-display-inline-block"/></span>
                                                         <f:setPropertyActionListener value="#{profesorModelo}" target="#{administracionProfesorControlador.profesorModelo}"/>
-                                                        <f:ajax render="formulario-modal-profesor-actualizar"/>
+                                                        <f:ajax render="formulario-modal-profesor"/>
                                                     </h:commandLink>
                                                 </li>
                                                 <li>
@@ -162,6 +162,7 @@
                     <div class="uk-modal-header uk-background-secondary">
                         <p class="uk-h4 uk-text-center uk-text-bold uk-text-capitalize">
                             <h:outputText value="Nuevo Profesor" styleClass="letra-titulo" rendered="#{empty administracionProfesorControlador.profesorModelo.id}"/>
+                            <h:outputText value="Actualizar" styleClass="letra-titulo" rendered="#{not empty administracionProfesorControlador.profesorModelo.id}"/>
 
                         </p>
                     </div>
@@ -263,20 +264,18 @@
                                     render="@form"/>
                         </h:commandButton>
 
-                        <h:commandButton value="${otrosboton['add']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" >
+                        <h:commandButton value="${otrosboton['add']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{empty administracionProfesorControlador.profesorModelo.id}">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.inserta()}"
                                     render="@form formulario-tabla modal-password"
                                     onevent="function funcion(data) { cerrarModal(data, 'modalProfresor',1); }"/>
                         </h:commandButton>
-                        <ui:remove>
                         <h:commandButton value="${otrosboton['update']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{not empty administracionProfesorControlador.profesorModelo.id}">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.actualiza()}"
                                     render="@form formulario-tabla modal-password"
                                     onevent="function funcion(data) { cerrarModal(data, 'modalProfresor',1);  }"/>
                         </h:commandButton>
-                        </ui:remove>
                     </div>
                 </h:form>
             </div>
@@ -321,7 +320,7 @@
                     <ui:repeat value="#{administracionProfesorControlador.profesorModeloLista}" var="profesorModelo">
                         <div class="tablero-licencia">
                             <div class="imagen">
-                                <h:graphicImage styleClass="uk-display-inline-block " library="img" name="/avatar/maestro.svg" width="60"/>
+                                <h:graphicImage styleClass="uk-display-inline-block " url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/maestro.svg"  width="60"/>
                             </div>
                             <div class="informacion">
                                 <h6>#{otrosetiqueta['teachers']}</h6>
