--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/free-library.xhtml
@@ -155,7 +155,7 @@
                 </ul>
 <!--            </div>-->
         </div>
-        <script src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/biblioteca-alumno.js" type="application/json"></script>
+        <script src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/alumno/biblioteca-alumno.js" type="application/javascript"></script>
     </ui:define>
 </ui:composition>
 </html>
