--- a/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/grupo.xhtml
@@ -282,7 +282,8 @@
         <div class="uk-flex uk-flex-right">
             <h:button outcome="ir-atras" styleClass="uk-button uk-button-primary uk-margin-top" value="#{otrosboton['back']}"/>
         </div>
-        <h:outputScript library="js" name="administracion/grupo.js"/>
+        <ui:remove><h:outputScript library="js" name="administracion/grupo.js"/></ui:remove>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/grupo.js"></script>
     </ui:define>
 </ui:composition>
 
