--- a/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/coordinador/dashboard.xhtml
@@ -10,7 +10,7 @@
     <ul class="uk-nav uk-nav-default uk-nav-parent-icon" uk-nav="">
         <li class="uk-nav-header">#{otrosetiqueta['menu']}</li>
         <li class="uk-parent uk-open">
-            <a><h:graphicImage library="img" name="icono/escuela.svg" styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
+            <a><h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/icono/escuela.svg"  styleClass="uk-icon uk-icon-image uk-margin-small-right" pt:uk-svg=""/><span class="uk-text-capitalize">#{administracion['menu.schools']}</span></a>
             <ul class="uk-nav-sub">
                 <li class="uk-active"><a><h:outputText pt:uk-icon="home" styleClass="uk-margin-small-right"/><span class="uk-text-capitalize">#{administracion['menu.dashboard']}</span></a></li>
             </ul>
@@ -20,12 +20,13 @@
 <ui:define name="contenido">
     <h1>#{coordinador['dashboard.title']}</h1>
     <section class="contenido">
-        <h:outputStylesheet library="css" name="/coordinador/coordinador.css"/>
+        <ui:remove><h:outputStylesheet  library="css" name="/coordinador/coordinador.css"/></ui:remove>
+        <link rel="stylesheet"  href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/coordinador/coordinador.css"/>
 
         <ui:remove>
         <div class="informacion-profesor">
             <div class="uk-card uk-card-default uk-card-body ">
-                <h:graphicImage library="img"  width="100" height="100" name="/avatar/coordinador.svg"/>
+                <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/coordinador.svg"  width="100" height="100" />
                 <h4 class="uk-margin-remove-bottom uk-margin-medium-top uk-text-center">Juan Coordinador Coordinador</h4>
                 <p class="uk-text-meta uk-margin-medium-top">#{coordinadorControladorLocal.coordinadorModelo.apodo}</p>
             </div>
