storage imagenes modal profesor coordinador mudulo administracion

--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -276,7 +276,7 @@
                                 </div>
                                 </ui:remove>
                                 <c:forEach begin="1" end="28" var="indice">
-                                    <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
+                                    <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/iconos-login/${indice}.svg" />
                                 </c:forEach>
                                 <h:inputHidden id="input-secret-password"
                                                value="#{coordinadorControlador.coordinadorModelo.contrasenia}">
