--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -244,7 +244,7 @@
                             </div>
                             <div class="uk-width-1-1@m login">
                                 <c:forEach begin="1" end="28" var="indice">
-                                    <h:graphicImage library="img" name="alumno/iconos-login/${indice}.svg" />
+                                    <h:graphicImage url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/iconos-login/${indice}.svg" />
                                 </c:forEach>
                                 <h:inputHidden id="input-secret-password"
                                                value="#{administracionProfesorControlador.profesorModelo.contrasenia}">
@@ -344,10 +344,14 @@
                     <button class="uk-button uk-button-primary" onclick="generatePdf()" type="button">#{otrosboton['download.PDF']}</button>
                 </div>
         </h:panelGroup>
-
+        <ui:remove>
         <h:outputScript library="js" name="html2pdf.bundle.min.js"/>
         <h:outputScript library="js" name="administracion/profesores.js"/>
         <h:outputScript library="js" name="tabla-profesor.js"/>
+        </ui:remove>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/html2pdf.bundle.min.js"></script>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/administracion/profesores.js"></script>
+        <script type="application/javascript" src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/js/tabla-profesor.js"></script>
     </ui:define>
 
 </ui:composition>
