avatar profesro modal password

--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -329,7 +329,7 @@
                     <ui:repeat value="#{administracionProfesorControlador.profesorModeloLista}" var="profesorModelo">
                         <div class="tablero-licencia">
                             <div class="imagen">
-                                <h:graphicImage styleClass="uk-display-inline-block " url="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/avatar/maestro.svg"  width="60"/>
+                                <h:graphicImage styleClass="uk-display-inline-block "  library="img" name="/avatar/maestro.svg"  width="60"/>
                             </div>
                             <div class="informacion">
                                 <h6>#{otrosetiqueta['teachers']}</h6>
