--- a/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/profesores.xhtml
@@ -159,7 +159,7 @@
             </div>
         </div>
         <div class="uk-flex uk-flex-right uk-margin-top">
-            <button type="button" class="uk-button uk-button-primary uk-margin-small-right" uk-toggle="target: #modal-password">#{otrosboton['passwords']}</button>
+            <h:panelGroup   id="boton-password" class="uk-button  uk-margin-small-right #{not empty administracionProfesorControlador.profesorModeloLista ? 'uk-button-primary':'visibilidad'}"   pt:uk-toggle="target: #modal-password" >#{otrosboton['passwords']}</h:panelGroup>
             <h:button styleClass="uk-button uk-button-primary" value="#{otrosboton['back']}" outcome="regresar"/>
         </div>
 
@@ -276,7 +276,7 @@
                         <h:commandButton value="${otrosboton['add']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{empty administracionProfesorControlador.profesorModelo.id}">
                             <f:ajax execute="@form"
                                     listener="#{administracionProfesorControlador.inserta()}"
-                                    render="@form formulario-tabla modal-password"
+                                    render="@form formulario-tabla modal-password boton-password"
                                     onevent="function funcion(data) { cerrarModal(data, 'modalProfresor',1); }"/>
                         </h:commandButton>
                         <h:commandButton value="${otrosboton['update']}" onclick="cargaContrasenia()" styleClass="uk-button uk-button-secondary" rendered="#{not empty administracionProfesorControlador.profesorModelo.id}">
@@ -312,7 +312,7 @@
                         <button class="uk-button uk-button-default uk-modal-close uk-margin-small-right">#{otrosboton['cancel']}</button>
                         <h:commandButton styleClass="uk-button uk-button-danger uk-modal-close" value="#{otrosboton['remove']}" disabled="#{0 ne administracionProfesorControlador.totalGrupos}">
                             <f:ajax listener="#{administracionProfesorControlador.elimina}"
-                                    render="formulario-tabla modal-password"
+                                    render="formulario-tabla modal-password boton-password"
                                     onevent="function funcion(data) {cerrarModal(data,'modal-eliminar',1);}"/>
                         </h:commandButton>
                     </div>
