--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -74,9 +74,9 @@
             <div class="botones uk-width-2-3@m">
                 <h:button styleClass="boton-maestro-base" value="#{boton['back']}" outcome="tablero"/>
                 <h:button styleClass="boton-escuadron-base" value="#{boton['add']}" outcome="agregar-csv"/>
-                <button class="boton-escuadron-base uk-text-uppercase" uk-toggle="target: #modal-password">#{boton['passwords']}</button>
-                <button class="boton-escuadron-base reporte"
-                        disabled="#{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista ? 'disabled' : ''}"
+                <button  class="uk-text-uppercase boton-escuadron-base #{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista ? 'boton-disabilitado': ''}"  uk-toggle="target: #modal-password" data-desabilitado="#{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista}" >#{boton['passwords']}</button>
+                <button class="reporte boton-escuadron-base #{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista ? 'boton-disabilitado': ''} "
+                        data-desabilitado="#{empty grupoAlumnoControlador.tareaAlumnoGrupoModeloLista}"
                         data-grupo="#{profesorGrupoControlador.grupoModelo.grupo}"
                         data-grado="#{profesorGrupoControlador.grupoModelo.grado}">
                     #{boton['report']}
@@ -354,6 +354,12 @@
         <script type="application/javascript" >
             document.addEventListener('DOMContentLoaded',()=>{
                 var botonResporte = document.querySelector('.uk-container button.reporte');
+                const botones = document.querySelectorAll('.botones button');
+                botones.forEach(boton => {
+                    if(boton.dataset.desabilitado === "true"){
+                        boton.disabled = true;
+                    }
+                });
                 botonResporte.addEventListener('click', generarReporte);
             });
 
@@ -368,6 +374,7 @@
                 hiddenElement.click();
             }
         </script>
+
     </ui:define>
 </ui:composition>
 
